--- a/src/component/common/Submit.module.css
+++ b/src/component/common/Submit.module.css
@@ -2,7 +2,7 @@
     width:100%;
     padding-top:13px;
     padding-bottom:13px;
-    background: var(--color-blue);
+    background: rgb(15, 15, 159);
     border-radius:30px;
     margin-top:20px;
     display:flex;
