--- a/src/component/userscreencomp/dashboardNav.module.css
+++ b/src/component/userscreencomp/dashboardNav.module.css
@@ -1,29 +1,31 @@
+/* Main header container */
 .dashboardheader {
-    width: 100%;
-    height: 11vh;
-    border: 1px solid var(--color-fade);
     display: flex;
-   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.07);
-    margin-bottom: 0px;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap; /* Allow wrapping for smaller screens */
+    padding: 15px 20px;
+}
+/* Main header container */
+.dashboardheader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap; /* Allow wrapping for smaller screens */
+    padding: 15px 20px;
+    box-sizing: border-box;
 }
 
-.dashboardheader .headerleft {
-    width: 30%;
+.headerleft {
     display: flex;
     align-items: center;
-    padding-left: 24px;
-}
-
-.dashboardheader .headerleft .title {
-    font-size: 1.5rem;
-    padding-left: 0px;
-    color:var(--fadeText)
-    
+    flex: 1;
+    min-width: 200px;
 }
 
 .dashboardheader .headerleft .name {
     font-size: 1.2rem;
-    display:none
+    display: none;
 }
 
 .dashboardheader .headerleft .logo {
@@ -34,25 +36,24 @@
     font-weight: 900;
 }
 
-.dashboardheader .headerright {
-    width: 70%;
+.headerright {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-
+    width: 70%;
+    gap: 20px;
 }
 
-.dashboardheader .headerrightinner {
-    width: 70%;
+.headerrightinner {
     display: flex;
     align-items: center;
-    justify-content:flex-end;
+    justify-content: flex-end;
+    gap: 20px;
+    width: 100%;
 }
 
 .headerrightinner button {
-    padding: 12px;
-    padding-right: 25px;
-    padding-left: 25px;
+    padding: 12px 25px;
     border-radius: 25px;
     font-size: 1.2rem;
     background-color: var(--color-blue);
@@ -62,7 +63,7 @@
 
 .headerrightinner button:nth-of-type(2) {
     background-color: var(--color-fade);
-    color: var(--color-black)
+    color: var(--color-black);
 }
 
 .headerrightinner span {
@@ -76,9 +77,7 @@
 .headerrightinner .span {
     color: var(--color-background);
     display: none;
-
 }
-
 
 .headerrightinner .profileimage {
     width: 60px;
@@ -91,111 +90,75 @@
 
 .headerrightinner .profileimage span {
     color: var(--color-background);
-    background-color:var(--color-fader);
-    font-size:2.5rem;
-    width:40px;
-    height:40px;
-    border-radius:40px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    
+    background-color: var(--color-fader);
+    font-size: 2.5rem;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .headerrightinner .menu {
     display: none;
 }
 
-/*styling the notification container*/
-.notificationContainer{
-    position:relative
+/* Notification container */
+.notificationContainer {
+    position: relative;
 }
 
-.notificationContainer span:nth-of-type(2){
-    position:absolute;
-    top:0px;
-    left:20px
+.notificationContainer span:nth-of-type(2) {
+    position: absolute;
+    top: 0px;
+    left: 20px;
 }
 
-@media screen and (max-width: 1200px) {
-    .dashboardheader .headerright {
-        width: 80%;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
+/* Responsive Layouts */
 
+/* For tablets and below (max-width: 768px) */
+@media (max-width: 768px) {
+    .dashboardheader {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
     }
 
-    .dashboardheader .headerrightinner {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-
-    }
-}
-
-
-
-@media screen and (max-width: 650px) {
-
-
-    .dashboardheader .headerleft {
-        width: 60%;
-        display: flex;
-        align-items: center;
-        padding-left: 0px;
+    .headerright {
+        width: 100%; /* Full width for smaller screens */
+        justify-content: flex-start;
+        margin-top: 10px;
     }
 
-    .dashboardheader .headerright {
-        width: 40%;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        padding-right: 0px;
+    .headerrightinner {
+        gap: 10px;
     }
 
-    .dashboardheader .headerleft h1 {
-        display: none;
-    }
-    .dashboardheader .headerleft .name {
+    .menu .material-icons,
+    .profileimage .material-icons {
         font-size: 1.5rem;
-        display:block;
-        padding-left: 15px;
     }
 
     .dashboardheader .headerleft .logo {
         display: block;
-        margin-left: 10px;
+        font-size: 1.8rem; /* Slightly smaller logo for mobile */
+        color: var(--color-blue);
     }
-    
+
+    .dashboardheader .headerleft .name {
+        display: block;
+        font-size: 1.2rem;
+        color: var(--color-text);
+    }
 
     .headerrightinner button {
-        display: none
+        font-size: 1rem;
+        padding: 8px 16px;
     }
-
-    .headerrightinner .profileimage {
-        display: none;
-        
-    }
-
-    .headerrightinner .menu {
-        display:flex
-    }
-
-    .headerrightinner .menu span{
-        margin-right:0px
-    }
-
-    .dashboardheader .headerleft h1 {
-        display: none;
-    }
-
-
-
-
-
-
 }
+
+/* For mobile screens and below (max-width: 480px) */
+@media (max-width: 480px) {}
 
 
