--- a/src/component/Modal/Modal.module.css
+++ b/src/component/Modal/Modal.module.css
@@ -116,7 +116,7 @@
     margin-bottom: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: var(--color-blue);
+    background-color: #3a4d6c;
     color: var(--color-background);
     font-size: 1.2rem;
     font-family: Poppins;
